--- a/diensten/consultancy.html
+++ b/diensten/consultancy.html
@@ -4,72 +4,60 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Consultancy voor KMO’s | Buscemi Group</title>
-  <meta name="description" content="Praktische consultancy voor KMO’s: kostenoptimalisatie, strakkere processen en een helder groeiplan met duidelijke KPI’s." />
-  <link rel="canonical" href="https://buscemigroup.be/diensten/consultancy.html" />
+  <title>Marketing voor KMO’s | Buscemi Group</title>
+  <meta name="description" content="Resultaatgerichte marketing voor KMO’s: van strategie en content tot social ads, SEO/SEA en e-mail. Consistente groei met duidelijke KPI’s." />
+  <link rel="canonical" href="https://buscemigroup.be/diensten/marketing.html" />
   <meta name="theme-color" content="#0d1425" />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
 
   <!-- Styles -->
   <link rel="stylesheet" href="/style.css" />
-  <link rel="stylesheet" href="/utilities.css" />
 
   <!-- Icons & PWA -->
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-  <link rel="alternate icon" href="/favicon.ico" />
+  <link rel="icon" href="/assets/favicon.png" type="image/png" />
   <link rel="manifest" href="/site.webmanifest" />
 
   <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://buscemigroup.be/diensten/consultancy.html" />
+  <meta property="og:url" content="https://buscemigroup.be/diensten/marketing.html" />
   <meta property="og:site_name" content="Buscemi Group" />
-  <meta property="og:title" content="Consultancy voor KMO’s | Buscemi Group" />
-  <meta property="og:description" content="Kostenoptimalisatie, strategie en efficiëntere processen voor KMO’s. Snel resultaat met een haalbaar plan en duidelijke KPI’s." />
+  <meta property="og:title" content="Marketing voor KMO’s | Buscemi Group" />
+  <meta property="og:description" content="Van strategie en content tot social ads, SEO/SEA en e-mail. Consistente groei met duidelijke KPI’s." />
   <meta property="og:image" content="https://buscemigroup.be/assets/og-image.png" />
-  <meta property="og:locale" content="nl_BE" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Consultancy voor KMO’s | Buscemi Group" />
-  <meta name="twitter:description" content="Kostenoptimalisatie, strategie en efficiëntere processen voor KMO’s. Snel resultaat met een haalbaar plan en duidelijke KPI’s." />
-  <meta name="twitter:image" content="https://buscemigroup.be/assets/og-image.png" />
 
-  <!-- Skip-link styling -->
   <style>
     .skip-link{position:absolute;left:-999px;top:auto;width:1px;height:1px;overflow:hidden}
     .skip-link:focus{left:1rem;top:1rem;width:auto;height:auto;padding:.5rem 1rem;z-index:1000;background:#fff;outline:2px solid currentColor}
+    .subpage-hero { background: var(--bg-soft); text-align: center; padding-top: clamp(3rem, 8vw, 5rem); padding-bottom: clamp(3rem, 8vw, 5rem); }
+    .services-overview-grid { display: grid; gap: 1.5rem; }
+    @media (min-width: 768px) { .services-overview-grid { grid-template-columns: repeat(2, 1fr); } }
+    @media (min-width: 1024px) { .services-overview-grid { grid-template-columns: repeat(3, 1fr); } }
+    .service-detail-card { padding: 1.5rem; text-align: center; }
   </style>
 </head>
 <body>
   <a class="skip-link" href="#main">Ga naar hoofdinhoud</a>
 
-  <!-- Header/nav consistent -->
   <header class="site-header">
-    <div class="container nav">
+    <div class="container nav-container">
       <a class="brand" href="/">
         <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" decoding="async" />
       </a>
-
-      <button class="burger"
-              data-nav-toggle
-              aria-label="Hoofdmenu"
-              aria-expanded="false"
-              aria-controls="site-menu">☰</button>
-
-      <nav id="site-menu"
-           class="nav-links"
-           data-nav-menu
-           aria-label="Hoofdnavigatie"
-           aria-hidden="true">
+      <button class="burger" data-nav-toggle aria-label="Hoofdmenu" aria-expanded="false" aria-controls="site-menu">
+        <span class="burger-line"></span><span class="burger-line"></span><span class="burger-line"></span>
+      </button>
+      <nav id="site-menu" class="nav-links" data-nav-menu aria-label="Hoofdnavigatie" aria-hidden="true">
         <ul class="menu">
           <li><a href="/over.html" data-nav-link>Over</a></li>
           <li>
             <details class="dropdown" open>
               <summary>Diensten</summary>
               <ul class="submenu">
-                <li><a href="/diensten/marketing.html" data-nav-link>Marketing</a></li>
+                <li><a href="/diensten/marketing.html" data-nav-link class="is-active">Marketing</a></li>
                 <li><a href="/diensten/consultancy.html" data-nav-link>Consultancy</a></li>
               </ul>
             </details>
@@ -78,135 +66,125 @@
           <li><a href="/contact.html" data-nav-link>Contact</a></li>
         </ul>
       </nav>
-
       <a class="btn primary-cta" href="/contact.html">Plan kennismaking</a>
     </div>
   </header>
 
   <main id="main">
-    <!-- HERO -->
     <section class="subpage-hero">
       <div class="container">
-        <h1>Consultancy die <span class="accent">rust en rendement</span> brengt</h1>
-        <p class="sub mx-auto max-w-760">Heldere keuzes, minder ruis: kosten omlaag, processen strakker en strategie scherp — met KPI’s die je vooruit helpen.</p>
-        <p class="mt-12"><a class="btn" href="/contact.html">Plan kennismaking</a></p>
+        <p class="kicker">Marketing</p>
+        <h1>Marketing die <span class="accent">consequent resultaat</span> oplevert</h1>
+        <p class="sub mx-auto">Strategie, creatie en performance onder één dak. We bouwen een consistente merkbeleving en campagnes die converteren — met KPI’s die tellen.</p>
       </div>
     </section>
 
-    <!-- PROBLEEM & AANPAK -->
-    <section class="container mt-20">
-      <h2>Waar je vandaag tegenaan loopt</h2>
-      <ul class="grid-2 mt-12">
-        <li class="card pad">Kosten blijven stijgen, maar de marge groeit niet mee.</li>
-        <li class="card pad">Veel projecten tegelijk, weinig focus en prioriteit.</li>
-        <li class="card pad">Geen eenduidige KPI’s of structuur in rapportering.</li>
-        <li class="card pad">Processen zijn historisch gegroeid en zorgen voor vertraging.</li>
-      </ul>
-
-      <h2 class="mt-20">Onze aanpak</h2>
-      <ul class="grid-3 mt-12">
-        <li class="card pad tile">
-          <h3>1. Quickscan</h3>
-          <p>Inzicht in cijfers, processen en teams. We benoemen de grootste hefbomen en quick wins.</p>
-        </li>
-        <li class="card pad tile">
-          <h3>2. Roadmap</h3>
-          <p>Praktisch plan met prioriteiten, KPI’s, eigenaars en timing. Gericht op haalbare impact.</p>
-        </li>
-        <li class="card pad tile">
-          <h3>3. Implementatie</h3>
-          <p>We begeleiden de uitvoering, bewaken voortgang en sturen bij waar nodig.</p>
-        </li>
-      </ul>
-    </section>
-
-    <!-- DELIVERABLES -->
-    <section class="container mt-20">
-      <h2>Wat je krijgt</h2>
-      <ul class="grid-2 mt-12">
-        <li class="card pad">Kostenanalyse met besparingspistes per rubriek/leverancier</li>
-        <li class="card pad">Heldere KPI-set en maandelijkse rapportage</li>
-        <li class="card pad">Procesoptimalisaties en rolverdeling</li>
-        <li class="card pad">Roadmap met concrete acties, budget en planning</li>
-      </ul>
-    </section>
-
-    <!-- PRAKTISCH -->
-    <section class="container mt-20">
-      <h2>Praktisch</h2>
-      <p>
-        <strong>Doorlooptijd:</strong> quickscan en roadmap in 4–6 weken; eerste resultaten binnen 30–60 dagen.<br />
-        <strong>Samenwerking:</strong> traject op maat met vaste milestones en rapportering.<br />
-        <strong>Prijsindicatie:</strong> vanaf €1.800/dag of trajectprijs op maat (na intake).
-      </p>
-    </section>
-
-    <!-- MINI-CASE -->
-    <section class="container mt-20">
-      <h2>Case in de kijker</h2>
-      <figure class="card pad max-w-760 mx-auto text-center">
-        <blockquote>
-          <p><em>“Door de quickscan en roadmap konden we binnen twee maanden de operationele kosten verlagen en de doorlooptijd halveren. Eindelijk weer focus en zicht op de juiste KPI’s.”</em></p>
-        </blockquote>
-        <figcaption class="muted">— Zaakvoerder van een Belgische KMO</figcaption>
-      </figure>
-    </section>
-
-    <!-- FAQ -->
-    <section class="container mt-20">
-      <h2>Veelgestelde vragen</h2>
-      <div class="grid-2 mt-12">
-        <div class="card pad">
-          <h3>Wat hebben jullie nodig voor de quickscan?</h3>
-          <p>Basisfinanciën (marge/omzet per segment), contracten met leveranciers, een procesoverzicht en toegang tot je rapportage (indien aanwezig).</p>
+    <section class="services-overview-section fade-in-section">
+        <div class="container">
+            <div class="section-header">
+                <p class="kicker">Onze Expertise</p>
+                <h2>Wat we voor u doen</h2>
+            </div>
+            <div class="services-overview-grid">
+                <div class="card service-detail-card"><h3>Strategie & Positionering</h3><p>Doelgroep, propositie en kanalen scherp krijgen.</p></div>
+                <div class="card service-detail-card"><h3>Content & Creatie</h3><p>Copy, visuals en video die het merk dragen.</p></div>
+                <div class="card service-detail-card"><h3>Social & Advertising</h3><p>Meta, LinkedIn, Google Ads campagnes op conversie.</p></div>
+                <div class="card service-detail-card"><h3>SEO & SEA</h3><p>Techniek, content en autoriteit voor online vindbaarheid.</p></div>
+                <div class="card service-detail-card"><h3>E-mail & Automations</h3><p>Nurture-flows, segmentatie en lead-scoring.</p></div>
+                <div class="card service-detail-card"><h3>Analytics & KPI’s</h3><p>Dashboarding, A/B-testen en heldere rapportage.</p></div>
+            </div>
         </div>
-        <div class="card pad">
-          <h3>Werken jullie on-site of remote?</h3>
-          <p>We combineren beide. Workshops en kick-offs doen we graag on-site; opvolging kan efficiënt remote.</p>
-        </div>
-        <div class="card pad">
-          <h3>Hoe borgen we vertrouwelijkheid?</h3>
-          <p>We tekenen desgewenst een NDA. Gegevens worden enkel gebruikt voor het traject en veilig bewaard.</p>
-        </div>
-        <div class="card pad">
-          <h3>Kunnen we klein starten?</h3>
-          <p>Ja. We starten vaak met een compacte quickscan. Bevalt de samenwerking, dan rollen we door naar implementatie.</p>
-        </div>
-      </div>
     </section>
 
-    <!-- CONTACT CTA -->
-    <section class="container my-60">
-      <div class="cta center">
-        <p><strong>Klaar voor meer rust en rendement?</strong></p>
-        <a class="btn" href="/contact.html">Plan kennismaking</a>
+    <section class="process-section fade-in-section">
+        <div class="container">
+            <div class="section-header">
+                <p class="kicker">Onze Aanpak</p>
+                <h2>Van Plan tot Optimalisatie</h2>
+            </div>
+            <div class="process-grid">
+                <div class="card process-card"><div class="process-number">01</div><h3>Plan</h3><p>Campagneroadmap per kwartaal met duidelijke doelstellingen en budget.</p></div>
+                <div class="card process-card"><div class="process-number">02</div><h3>Productie</h3><p>Content, advertenties en landingspagina’s met correcte tracking.</p></div>
+                <div class="card process-card"><div class="process-number">03</div><h3>Optimalisatie</h3><p>Wekelijkse iteraties en een maandrapport met heldere learnings.</p></div>
+            </div>
+        </div>
+    </section>
+
+     <section class="faq-section fade-in-section">
+        <div class="container">
+            <div class="section-header">
+                <p class="kicker">FAQ</p>
+                <h2>Veelgestelde vragen</h2>
+            </div>
+            <div class="faq-grid">
+                <div class="card faq-card">
+                    <h3>Werken jullie met bestaande teams?</h3>
+                    <p>Zeker. We versterken uw interne marketing en werken samen met vaste partners waar nodig.</p>
+                </div>
+                <div class="card faq-card">
+                    <h3>Kunnen jullie alles meten?</h3>
+                    <p>We zetten correcte tracking op (GA4/GTM) en maken een dashboard met de KPI’s die ertoe doen.</p>
+                </div>
+                <div class="card faq-card">
+                    <h3>Doen jullie ook branding?</h3>
+                    <p>Ja, van brand story tot visuele guidelines. We koppelen branding altijd aan performance-doelen.</p>
+                </div>
+                <div class="card faq-card">
+                    <h3>Is AI betrokken?</h3>
+                    <p>We gebruiken AI waar het waarde toevoegt (analyses, contentvarianten), altijd met menselijke kwaliteitscontrole.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section class="cta-section fade-in-section">
+      <div class="container">
+        <div class="cta-card">
+          <h2>Klaar om uw marketing op te schalen?</h2>
+          <p>Plan een vrijblijvend gesprek en ontdek hoe we uw groei kunnen versnellen.</p>
+          <a class="btn" href="/contact.html">Plan kennismaking</a>
+        </div>
       </div>
     </section>
   </main>
 
   <footer class="site-footer">
-    <div class="container flex justify-between items-center gap-12 flex-wrap">
-      <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
-      <div class="muted">
-        <a href="/legal.html">Privacy</a> • <a href="/legal.html">Cookies</a> • <a href="/legal.html">Algemene voorwaarden</a>
+      <div class="container footer-container">
+        <div class="footer-brand">
+          <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40">
+          <p>Marketing & Consultancy voor KMO's.</p>
+        </div>
+        <div class="footer-links">
+          <a href="/legal.html">Privacy</a>
+          <a href="/legal.html#cookies">Cookies</a>
+          <a href="/legal.html#voorwaarden">Voorwaarden</a>
+        </div>
+        <div class="footer-info">
+          <p>&copy; <span id="year"></span> Buscemi Group</p>
+          <p>BE 1027.136.562</p>
+        </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
-  <!-- Scripts -->
   <script src="/cookie.js" defer></script>
   <script src="/js/analytics.js" defer></script>
   <script src="/nav.js" defer></script>
-
-  <!-- Jaar in footer -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      var y = document.getElementById('year');
-      if (y) y.textContent = new Date().getFullYear();
+      const yearEl = document.getElementById('year');
+      if (yearEl) yearEl.textContent = new Date().getFullYear();
+      const sections = document.querySelectorAll('.fade-in-section');
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('is-visible');
+            observer.unobserve(entry.target);
+          }
+        });
+      }, { threshold: 0.1 });
+      sections.forEach(section => { observer.observe(section); });
     });
   </script>
-
-  <!-- No-JS fallback voor menu -->
-  <noscript><style>[data-nav-menu]{display:block!important}</style></noscript>
+  <noscript><style>.fade-in-section { opacity: 1; transform: none; } [data-nav-menu]{display:block!important}</style></noscript>
 </body>
 </html>
